# roshask

./: .gitignore  .travis.yml  BinaryIter.hs  Dockerfile  MasterAPI.hs  MsgGen.hs  MsgParse.hs  MsgTest.hs  MsgTypes.hs  Node.hs  README.markdown  ROSTypes.hs  RosBinary.hs  RosTcp.hs  SlaveAPI.hs  Vagrantfile  XmlRpcTuples.hs  hackagedocs.sh  keyboard  roshask-notes.org  roshask-notes.org_archive  roshask.cabal  stack.yaml
BackgroundSub/: BackgroundSub.cabal  mainpage.dox  manifest.xml
BackgroundSub/src/: ImageProc.hs  Main.hs
CamPub/: CMakeLists.txt  CamPub.cabal  Setup.hs  mainpage.dox
CamPub/src/: Main.hs
CamSub/: mainpage.dox  manifest.xml
Client/: roshask.cabal
Client/Ros/: BinaryIter.hs  ConnectionHeader.hs  Logging.hs  MasterAPI.hs  Node.hs  NodeType.hs  ParameterServerAPI.hs  Rate.hs  RosTcp.hs  SlaveAPI.hs  StreamCombinators.hs  Topic.hs  TopicStats.hs  TopicUtil.hs
Client/Ros/Core/: RosBinary.hs  RosTypes.hs  Stream.hs
Client/Ros/Core/Msg/: Analysis.hs  BinaryInstance.hs  Gen.hs  Main.hs  MsgInfo.hs  NFDataInstance.hs  Parse.hs  ResolutionTypes.hs  StorableInstance.hs  Types.hs
Client/Ros/Core/Util/: BytesToVector.hs  StorableMonad.hs
Client/Ros/Util/: RingChan.hs
Example1/: Main.hs  Makefile  RosHask1.cabal  Setup.hs  manifest.xml
Example2/: Example2.cabal  Setup.hs
Example3/: .ghci  CMakeLists.txt  Example3.cabal  Setup.hs  mainpage.dox
Example4/: .ghci  Example4.cabal  Setup.hs
Example4/src/: Main.hs
Examples/: Interruptible.hs
Examples/AddTwoIntsClient/: AddTwoIntsClient.cabal  README.txt  Setup.hs  mainpage.dox  manifest.xml
Examples/AddTwoIntsClient/src/: Main.hs
Examples/BlinkerCode/: BlinkerCode.cabal  Setup.hs  mainpage.dox  manifest.xml
Examples/BlinkerCode/src/: BlinkerCode.hs
Examples/Example1/: RosHask1.cabal  Setup.hs
Examples/Example1/src/: Main.hs
Examples/Example5/: .ghci  Example5.cabal  mainpage.dox  manifest.xml
Examples/Example5/src/: Example5.hs
Examples/FastAndSlow/: FastAndSlow.cabal  mainpage.dox  manifest.xml
Examples/FastAndSlow/src/: FastAndSlow.hs
Examples/NodeCompose/: CMakeLists.txt  NodeCompose.cabal  mainpage.dox  manifest.xml
Examples/NodeCompose/src/: DetectUFO.hs  JustDetect.hs  JustScope.hs  Main.hs  Telescope.hs
Examples/PubSub/: PubSub.cabal  Setup.hs  mainpage.dox  manifest.xml
Examples/PubSub/src/: Listener.hs  Talker.hs
Examples/ShowVideo/: .gitignore  README  ShowVideo.cabal  mainpage.dox  manifest.xml
Examples/ShowVideo/src/: SDLWrapper.hs  SDLWrapper_stub.c  SDLWrapper_stub.h  ShowVideo.hs  c_main.c
Examples/TrajFollower/: .gitignore  TrajFollower.cabal  mainpage.dox  manifest.xml
Examples/TrajFollower/src/: TrajFollower.hs
Examples/Turtle/: .ghci  Setup.hs  Turtle.cabal  mainpage.dox  manifest.xml
Examples/Turtle/src/: AngleNum.hs  Turtle.hs  Turtle2.hs  Turtle3.hs
Msg/: Analysis.hs  Gen.hs  HeaderSupport.hs  Main.hs  MsgInfo.hs  Parse.hs  Test.hs  Types.hs
PyImageGen/: mainpage.dox  manifest.xml
Ros/: BinaryIter.hs  ConnectionHeader.hs  Logging.hs  MasterAPI.hs  Node.hs  NodeType.hs  ParameterServerAPI.hs  Publisher.hs  Rate.hs  RosBinary.hs  RosTcp.hs  RosTypes.hs  RunNode.hs  SlaveAPI.hs  Stream.hs  StreamCombinators.hs  Topic.hs  TopicMT.hs  TopicPID.hs  TopicStamped.hs  TopicStats.hs  TopicUtil.hs  (+1 more)
Tests/test_msgs/: package.xml
Tests/test_msgs/golden/: StringConst.hs
Tests/test_msgs/msg/: StringConst.msg
msgs/Actionlib_msgs/: ROS-actionlib-msgs.cabal
msgs/Actionlib_msgs/Ros/Actionlib_msgs/: GoalStatusArray.hs
msgs/Geometry_msgs/: ROS-geometry-msgs.cabal
msgs/Geometry_msgs/Ros/Geometry_msgs/: Accel.hs  AccelStamped.hs  AccelWithCovariance.hs  AccelWithCovarianceStamped.hs  Inertia.hs  InertiaStamped.hs  Point.hs  Point32.hs  PointStamped.hs  Polygon.hs  PolygonStamped.hs  Pose.hs  Pose2D.hs  PoseArray.hs  PoseStamped.hs  PoseWithCovariance.hs  PoseWithCovarianceStamped.hs  Quaternion.hs  QuaternionStamped.hs  Transform.hs  TransformStamped.hs  Twist.hs  TwistStamped.hs  TwistWithCovariance.hs  TwistWithCovarianceStamped.hs  Vector3.hs  Vector3Stamped.hs  Wrench.hs  WrenchStamped.hs
msgs/Nav_msgs/: ROS-nav-msgs.cabal
msgs/Nav_msgs/Ros/Nav_msgs/: GetMapAction.hs  GetMapActionFeedback.hs  GetMapActionGoal.hs  GetMapActionResult.hs  GetMapFeedback.hs  GetMapGoal.hs  GetMapRequest.hs  GetMapResponse.hs  GetMapResult.hs  GetPlanRequest.hs  GetPlanResponse.hs  GridCells.hs  MapMetaData.hs  OccupancyGrid.hs  Odometry.hs  Path.hs  SetMapRequest.hs  SetMapResponse.hs
msgs/Sensor_msgs/: ROS-sensor-msgs.cabal
msgs/Sensor_msgs/Ros/Sensor_msgs/: BatteryState.hs  CameraInfo.hs  ChannelFloat32.hs  CompressedImage.hs  FluidPressure.hs  Illuminance.hs  Image.hs  Imu.hs  JointState.hs  Joy.hs  JoyFeedback.hs  JoyFeedbackArray.hs  LaserEcho.hs  LaserScan.hs  MagneticField.hs  MultiDOFJointState.hs  MultiEchoLaserScan.hs  NavSatFix.hs  NavSatStatus.hs  PointCloud.hs  PointCloud2.hs  PointField.hs  Range.hs  RegionOfInterest.hs  RelativeHumidity.hs  SetCameraInfoRequest.hs  SetCameraInfoResponse.hs  Temperature.hs  TimeReference.hs
msgs/Std_msgs/: ROS-std-msgs.cabal
msgs/Std_msgs/Ros/Std_msgs/: Bool.hs  Byte.hs  ByteMultiArray.hs  Char.hs  ColorRGBA.hs  Duration.hs  Empty.hs  Float32.hs  Float32MultiArray.hs  Float64.hs  Float64MultiArray.hs  Header.hs  Int16.hs  Int16MultiArray.hs  Int32.hs  Int32MultiArray.hs  Int64.hs  Int64MultiArray.hs  Int8.hs  Int8MultiArray.hs  MultiArrayDimension.hs  MultiArrayLayout.hs  String.hs  Time.hs  UInt16.hs  UInt16MultiArray.hs  UInt32.hs  UInt32MultiArray.hs  UInt64.hs  UInt64MultiArray.hs  UInt8.hs  UInt8MultiArray.hs
msgs/Std_srvs/: ROS-std-srvs-msgs.cabal
msgs/Std_srvs/Ros/Std_srvs/: EmptyRequest.hs  EmptyResponse.hs  SetBoolRequest.hs  SetBoolResponse.hs  TriggerRequest.hs  TriggerResponse.hs
msgs/Turtlesim/: ROS-turtlesim-msgs.cabal
msgs/Turtlesim/Ros/Turtlesim/: Color.hs  KillRequest.hs  KillResponse.hs  Pose.hs  SetPenRequest.hs  SetPenResponse.hs  SpawnRequest.hs  SpawnResponse.hs  TeleportAbsoluteRequest.hs  TeleportAbsoluteResponse.hs  TeleportRelativeRequest.hs  TeleportRelativeResponse.hs
(+163 files in other folders)
