Name:                roshask
Version:             0.1.0
Synopsis:            Haskell support for the ROS robotics framework.
License:             BSD3
License-file:        LICENSE
Cabal-version:       >=1.6
Author:              Anthony Cowley
Maintainer:          Anthony Cowley <acowley@seas.upenn.edu>
Copyright:           (c) 2010 Anthony Cowley
Category:            Robotics
Build-type:          Simple
Bug-reports:         http://github.com/acowley/roshask/issues
Tested-with:         GHC==6.12.3
Description:         Tools for working with ROS in Haskell.
                     .
                     ROS (<http://www.ros.org>) is a software
                     framework developed by Willow Garage
                     (<http://http://www.willowgarage.com/>) that aims
                     to provide a standard software architecture for
                     robotic systems. The main idea of the framework
                     is to support the development and execution of
                     loosely coupled /Node/s connected by typed
                     /Topic/s. Each Node represents a locus of
                     processing, ideally with a minimal interface
                     specified in terms of the types of Topics it
                     takes as input and offers as output.
                     .
                     This package provides libraries for creating new
                     ROS Nodes in Haskell, along with the @roshask@
                     executable for creating new ROS packages and
                     generating Haskell code from message definition
                     files (see the ROS documentation for information
                     on message types).
                     .
                     See
                     <http://github.com/acowley/roshask/wiki> for more
                     information on getting started.

Extra-source-files:  Examples/PubSub/CMakeLists.txt
                     Examples/PubSub/Makefile
                     Examples/PubSub/PubSub.cabal
                     Examples/PubSub/Setup.hs
                     Examples/PubSub/mainpage.dox
                     Examples/PubSub/manifest.xml
                     Examples/PubSub/src/Talker.hs
                     Examples/PubSub/src/Listener.hs

Source-repository this
  type:     git
  location: http://github.com/acowley/roshask.git
  tag:      0.1.0

Flag logging
 Description: Enable ROS Logging support.
 Default:     True

Library
  -- Modules exported by the library.
  Exposed-modules:     Ros.Node
                       Ros.Topic
                       Ros.TopicUtil
                       Ros.TopicPID
                       Ros.TopicMT
                       Ros.Rate
                       Ros.Core.Msg.MsgInfo
                       Ros.Core.Msg.HeaderSupport 
                       Ros.Core.Util.BytesToVector
                       Ros.Core.Util.StorableMonad
                       Ros.Core.RosTypes
                       Ros.Core.RosBinary
                       Ros.Core.Build.SetupUtil

  -- The Log and Header message types must be generated by a
  -- bootstrapped roshask.
  if flag(logging)
    Exposed-modules:   Ros.Logging
    Other-modules:     Ros.Core.Log Ros.Core.Header
    Build-depends:     template-haskell
  
  -- Packages needed in order to build this package.
  Build-depends:       base >= 4 && < 6,
                       binary,
                       bytestring,
                       containers,
                       network == 2.2.1.*,
                       network-bytestring >= 0.1.2 && < 0.2,
                       Cabal >= 1.8 && < 1.9,
                       stm,
                       mtl == 1.1.*,
                       monads-fd,
                       time == 1.1.*,
                       BoundedChan >= 1.0.0.2 && < 1.1,
                       parsec >= 3.1 && < 3.2,
                       process >= 1.0.1.3 && < 1.1,
                       snap-core >= 0.2.16 && < 0.3, 
                       snap-server >= 0.2.16 && < 0.3,
                       storable-tuple >= 0.0.2 && < 0.1,
                       transformers == 0.2.*,
                       haxr >= 3000.8 && < 3001,
                       utf8-string >= 0.3.6 && < 4,
                       uri >= 0.1.5 && < 0.2

  if !os(windows)
    Build-depends: unix


  GHC-Options:         -Odph -Wall -fno-warn-name-shadowing
  Hs-Source-Dirs:      .
  
  -- Modules not exported by this package.
  Other-modules:      Ros.MasterAPI Ros.SlaveAPI Ros.ParameterServerAPI
                      Ros.NodeType Ros.RunNode
                      Ros.RosTcp Ros.ConnectionHeader Ros.TopicStats 
                      Ros.BinaryIter Ros.Util.RingChan Ros.Util.ArgRemapping 
                      Ros.Core.Build.DepFinder Ros.Core.RosTime Ros.Util.PID
                      Ros.Util.AppConfig

-- The ROS .msg definition parser and Haskell code generation utility.
Executable roshask
  Build-Depends:  base >= 4.2 && < 6,
                  bytestring,
                  containers == 0.3.*,
                  mtl == 1.1.*,
                  vector == 0.7.*,
                  binary,
                  filepath > 1.1 && < 1.2,
                  attoparsec > 0.8 && < 0.9,
                  directory > 1.0 && < 1.1,
                  process >= 1.0.1.2 && < 1.1,
                  xml >= 1.3.5 && < 1.4,
                  pureMD5 == 2.1.*

  GHC-Options:    -Odph -Wall -fno-warn-name-shadowing
  Main-Is:        Ros/Core/Msg/Main.hs
  Other-modules:  Ros.Core.Msg.Parse Ros.Core.Msg.Gen Ros.Core.Msg.Analysis 
                  Ros.Core.Msg.ResolutionTypes Ros.Core.Msg.MD5
                  Ros.Core.Build.Init Ros.Core.Build.SetupUtil
                  Ros.Core.Msg.BinaryInstance Ros.Core.Msg.StorableInstance
                  Ros.Core.Msg.FieldImports Ros.Core.Msg.NFDataInstance
  Hs-Source-Dirs: .
