Name:                BackgroundSub
Version:             0.0
Synopsis:            Background subtraction of a camera stream.
Cabal-version:       >=1.6
Category:            Robotics
Build-type:          Custom

Executable BackSub
  Build-Depends:  base >= 4.2 && < 5,
                  vector,
                  Stream,
                  HOpenCV,
                  roshask
  GHC-Options:    -Odph -threaded
  Main-Is:        Main.hs
  Hs-Source-Dirs: src
  Other-Modules:  ImageProc