Name:                CamPub
Version:             0.0
Synopsis:            I am code
Cabal-version:       >=1.6
Category:            Robotics
Build-type:          Custom

Executable CamPub
  Build-Depends:  base >= 4.2 && < 5,
                  HOpenCV >= 0.1.2.2.1,
                  vector,
                  BoundedChan,
                  roshask
  GHC-Options:    -Odph -threaded
  Main-Is:        Main.hs
  Hs-Source-Dirs: src