Name:                roshask
Version:             0.1
Synopsis:            Haskell support for ROS.
Description:         Library for building ROS Nodes in Haskell.
License:             BSD3
License-file:        LICENSE
Cabal-version:       >=1.6
Author:              Anthony Cowley
Maintainer:          acowley@seas.upenn.edu
Copyright:           (c) 2010 Anthony Cowley
Category:            Robotics
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
Extra-source-files:  Ros/Logging.hs

Library
  -- Modules exported by the library.
  Exposed-modules:     Ros.Node
                       Ros.StreamCombinators
                       Ros.Rate
                       Ros.Core.Msg.MsgInfo
                       Ros.Core.Msg.HeaderSupport 
                       Ros.Core.Util.BytesToVector
                       Ros.Core.Util.StorableMonad
                       Ros.Core.RosTypes
                       Ros.Core.RosBinary
                       Ros.Core.Stream
  
  -- Packages needed in order to build this package.
  Build-depends:       base >= 4 && < 6,
                       binary,
                       bytestring,
                       containers,
                       unix,
                       network,
                       Cabal >= 1.8 && < 1.9,
                       stm,
                       mtl,
                       monads-fd,
                       time == 1.1.*,
                       BoundedChan >= 1.0.0.2 && < 1.1,
                       network-bytestring >= 0.1.3 && < 0.2,
                       parsec >= 3.1 && < 3.2,
                       process >= 1.0.1.3 && < 1.1,
                       snap-core >= 0.2.7.1 && < 0.3, 
                       snap-server >= 0.2.7.2 && < 0.3,
                       haxr == 3000.*,
                       utf8-string >= 0.3.6 && < 4,
                       uri >= 0.1.5 && < 0.2

  GHC-Options:         -Odph -Wall -fno-warn-name-shadowing
  Hs-Source-Dirs:      .
  
  -- Modules not exported by this package.
  Other-modules:      Ros.MasterAPI Ros.SlaveAPI Ros.ParameterServerAPI
                      Ros.NodeType Ros.RunNode
                      Ros.RosTcp Ros.ConnectionHeader Ros.TopicStats 
                      Ros.BinaryIter Ros.Util.XmlRpcTuples 
                      Ros.Util.RingChan Ros.Util.ArgRemapping 

-- The ROS .msg definition parser and Haskell code generation utility.
Executable roshask
  Build-Depends:  base >= 4.2 && < 6,
                  bytestring,
                  containers == 0.3.*,
                  monads-fd == 0.1.*,
                  vector == 0.7.*,
                  binary,
                  filepath > 1.1 && < 1.2,
                  attoparsec > 0.8 && < 0.9,
                  directory > 1.0 && < 1.1,
                  process >= 1.0.1.2 && < 1.1,
                  xml >= 1.3.5 && < 1.4

  GHC-Options:    -Odph -Wall -fno-warn-name-shadowing
  Main-Is:        Ros/Core/Msg/Main.hs
  Other-modules:  Ros.Core.Msg.Parse Ros.Core.Msg.Gen Ros.Core.Msg.Analysis 
                  Ros.Core.Msg.ResolutionTypes
                  Ros.Core.Build.Init Ros.Core.Build.SetupUtil
                  Ros.Core.Msg.BinaryInstance Ros.Core.Msg.StorableInstance
                  Ros.Core.Msg.FieldImports
  Hs-Source-Dirs: .
