Name:                RosHask1
Version:             0.1
Synopsis:            A ROS node for testing
-- A longer description of the package.
-- Description:         


License:             BSD3
License-file:        LICENSE
Cabal-version:       >=1.2
Author:              Anthony Cowley
Maintainer:          acowley@seas.upenn.edu

-- A copyright notice.
-- Copyright:           

Category:            Robotics
Build-type:          Custom

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  
Executable RosHask1
  Build-Depends: base >= 4.2,
                 bytestring,
                 vector >= 0.6 && < 0.7,
                 binary

  GHC-Options:   -Odph
  Main-Is:       Main.hs
  Hs-Source-Dirs: ., /Users/acowley/Documents/Haskell/ROS
  Other-Modules: Setup Ros.Std_msgs.String
