Name:                RosHask1
Version:             0.1
Synopsis:            The first RosHask node.
-- A longer description of the package.
-- Description:         


License:             BSD3
License-file:        LICENSE
Cabal-version:       >=1.6
Author:              Anthony Cowley
Maintainer:          acowley@seas.upenn.edu

-- A copyright notice.
Copyright:           (c) 2010 Anthony Cowley

Category:            Robotics
Build-type:          Custom

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  
Executable RosHask1
  Build-Depends:  base >= 4.2 && < 6,
                  deepseq == 1.1.*,
                  roshask

  GHC-Options:    -Odph
  Main-Is:        Main.hs
  Hs-Source-Dirs: src
