Name:                Example5
Version:             0.0
Synopsis:            I am code
Cabal-version:       >=1.6
Category:            Robotics
Build-type:          Custom

Executable Example5
  Build-Depends:  base >= 4.2 && < 5,
                  template-haskell,
                  vector == 0.7.*,
                  roshask
  GHC-Options:    -Odph -main-is Example5
  Main-Is:        Example5.hs
  Hs-Source-Dirs: src