Name:                FastAndSlow
Version:             0.0
Synopsis:            I am code
Cabal-version:       >=1.6
Category:            Robotics
Build-type:          Custom

Executable FastAndSlow
  Build-Depends:  base >= 4.2 && < 5,
                  roshask
  GHC-Options:    -Odph -main-is FastAndSlow
  Main-Is:        FastAndSlow.hs
  Hs-Source-Dirs: src