Name:              ROS-NodeCompose
Version:           0.0
Synopsis:          I am code
Cabal-version:     >=1.6
Category:          Robotics
Build-type:        Custom
Description: A demonstration of composing two Node values in order to
             avoid copying values between processes. All image data is
             kept in process, and pushed over the Topic connecting
             telescope and detectUFO with a pointer copy.

Executable composition
  Build-Depends:   base             >= 4.2 && < 6
                 , vector           >  0.7
                 , time             >= 1.1
                 , roshask          >= 0.3
                 , lens-family-core >= 1.2
                 , mtl
                 , ROS-std-msgs
                 , ROS-sensor-msgs
  GHC-Options:     -Odph -threaded
  GHC-Prof-Options:-prof -auto-all -caf-all
  Hs-Source-Dirs:  src
  Main-Is:         Main.hs
  Other-Modules:   Telescope DetectUFO

Executable scope
  Build-Depends:   base             >= 4.2 && < 6
                 , vector           >  0.7
                 , time             >= 1.1
                 , roshask          >= 0.3
                 , lens-family-core >= 1.2
                 , mtl
                 , ROS-std-msgs
                 , ROS-sensor-msgs
  GHC-Options:     -Odph -threaded -main-is Telescope
  GHC-Prof-Options:-prof -auto-all -caf-all
  Hs-Source-Dirs:  src
  Main-Is:         Telescope.hs

Executable detect
  Build-Depends:   base             >= 4.2 && < 6
                 , vector           >  0.7
                 , time             >= 1.1
                 , roshask          >= 0.3
                 , lens-family-core >= 1.2
                 , mtl
                 , ROS-std-msgs
                 , ROS-sensor-msgs
  GHC-Options:     -Odph -threaded -main-is DetectUFO
  GHC-Prof-Options:-prof -auto-all -caf-all
  Hs-Source-Dirs:  src
  Main-Is:         DetectUFO.hs
