Name:                ROS-PubSub
Version:             0.0
Synopsis:            I am code
Cabal-version:       >=1.6
Category:            Robotics
Build-type:          Custom

Executable talker
  Build-Depends:  base >= 4.2 && < 6,
                  vector >= 0.7,
                  time >= 1.1,
                  roshask == 0.1.*,
                  ROS-std-msgs
  GHC-Options:    -Odph -main-is Talker
  Main-Is:        Talker.hs
  Hs-Source-Dirs: src

Executable listener
  Build-Depends:  base >= 4.2 && < 6,
                  vector >= 0.7,
                  time >= 1.1,
                  roshask == 0.1.*,
                  ROS-std-msgs
  GHC-Options:    -Odph -main-is Listener
  Main-Is:        Listener.hs
  Hs-Source-Dirs: src
