Name:                TrajFollower
Version:             0.0
Synopsis:            I am code
Cabal-version:       >=1.6
Category:            Robotics
Build-type:          Custom

Executable TrajFollower
  Build-Depends:  base >= 4.2 && < 5,
                  vector >= 0.6.0.2 && < 0.7,
                  roshask
  GHC-Options:    -Odph -main-is TrajFollower
  Main-Is:        TrajFollower.hs
  Hs-Source-Dirs: src