Name:                ROS-Turtle
Version:             0.0
Synopsis:            I am code
Cabal-version:       >=1.6
Category:            Robotics
Build-type:          Custom

Executable Turtle
  Build-Depends:  base >= 4.2 && < 5,
                  vector == 0.7.*,
                  time == 1.1.*,
                  vector-space,
                  roshask == 0.1.*,
                  ROS-turtlesim-msgs
  GHC-Options:    -Odph -main-is Turtle
  Main-Is:        Turtle.hs
  Hs-Source-Dirs: src