<package>
  <name>test_msgs</name>
  <version>0.1</version>
  <description>
     test_msgs defines message types to test roshask message
     definition parsing and code generation.
  </description>
  <maintainer email="roshask">roshask</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
